--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -37,3 +37,33 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Update Other User Data</h1>
+    </div>
+    <div class="col-sm-12">
+      <form class="form" name="form" ng-submit="changeData(form)" novalidate>
+
+        <div class="form-group">
+          <label>Full Name</label>
+
+          <input name="full-name" class="form-control" ng-model="name"/>
+        </div>
+
+        <div class="form-group">
+          <label>City</label>
+
+          <input name="city" class="form-control" ng-model="city"/>
+        </div>
+        <div class="form-group">
+          <label>State</label>
+
+          <input name="state" class="form-control" ng-model="state"/>
+        </div>
+        <p class="help-block"> {{ otherMessage }} </p>
+        <button class="btn btn-lg btn-primary" type="submit">Save User Data</button>
+      </form>
+    </div>
+  </div>
+</div>
