--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,21 +1,27 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-
-<div class="container">
+<header class="hero-unit" id="banner" ng-hide="isLoggedIn()">
+  <div class="container">
+    <h1>Book Trading Club</h1>
+    <p class="lead">Login to manage your book collection, and trade with others!</p>
+    <img src="assets/images/logo.png" alt="I'm Yeoman">
+  </div>
+</header>
+<div class="container" ng-show="isLoggedIn()">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}<button type="button" class="close" ng-click="deleteThing(thing)">&times;</button></a></li>
+      <h1 class="page-header">My Books:</h1>
+      <ul class="nav nav-tabs nav-stacked col-md-2" ng-repeat="book in filteredBooks">
+        <li><a href="#"><book-img book-object="book"></book-img><button type="button" class="close" ng-click="deleteBook(book)">&times;</button></a></li>
       </ul>
     </div>
   </div>
 
   <form class="thing-form">
-    <label>Syncs in realtime across clients</label>
+    <label>Book Title</label>
     <p class="input-group">
-      <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="newThing">
+      <input type="text" class="form-control" placeholder="Add a new book or isbn here." ng-model="newBook">
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="addThing()">Add New</button>
+        <button type="submit" class="btn btn-primary" ng-click="addBook()">Add New</button>
       </span>
     </p>
   </form>
