--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -48,18 +48,18 @@
         <div class="form-group">
           <label>Full Name</label>
 
-          <input name="full-name" class="form-control" ng-model="name"/>
+          <input name="full-name" class="form-control" ng-model="otherUser.name"/>
         </div>
 
         <div class="form-group">
           <label>City</label>
 
-          <input name="city" class="form-control" ng-model="city"/>
+          <input name="city" class="form-control" ng-model="otherUser.city"/>
         </div>
         <div class="form-group">
           <label>State</label>
 
-          <input name="state" class="form-control" ng-model="state"/>
+          <input name="state" class="form-control" ng-model="otherUser.state"/>
         </div>
         <p class="help-block"> {{ otherMessage }} </p>
         <button class="btn btn-lg btn-primary" type="submit">Save User Data</button>
