--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/proposedTrades/proposedTrades.css">
       <link rel="stylesheet" href="app/trade/trade.css">
       <link rel="stylesheet" href="components/bookImg/bookImg.css">
       <link rel="stylesheet" href="components/modal/modal.css">
@@ -80,6 +81,8 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/proposedTrades/proposedTrades.controller.js"></script>
+          <script src="app/proposedTrades/proposedTrades.js"></script>
           <script src="app/trade/trade.controller.js"></script>
           <script src="app/trade/trade.js"></script>
           <script src="components/auth/auth.service.js"></script>
@@ -88,6 +91,7 @@
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/otherUser/otherUser.service.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
